# Clipping-automation-2.0

./: .dockerignore  .env.example  .gitignore  .vercelignore  AI_MONITOR_SYNC_FIX.md  API_GUIDE.md  AUTO_MONITOR_STATUS.md  BACKEND_RESTART_INSTRUCTIONS.md  CAPTIONS_AI_IMPLEMENTATION.md  CHANGELOG.md  CODEBASE_COMPARISON.md  COMMIT_ANALYSIS_REPORT.md  COMPLETE_SYSTEM_GUIDE.md  CPU_OPTIMIZATION_SUMMARY.md  CRON_SETUP_GUIDE.md  DEMO_RESULTS.md  DEPLOYMENT_CHECKLIST.md  FEATURE_MERGE_SUMMARY.md  FINAL_SUMMARY.md  FRONTEND_ENHANCED.md  FRONTEND_REVAMP.md  FRONTEND_SETUP.md  HEALTH_CHECK_REPORT.md  HEALTH_CHECK_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MULTI_CHANNEL_USAGE.md  Makefile  OFFLINE_STREAMERS_FIX.md  PERFORMANCE_OPTIMIZATIONS.md  Procfile  QUICK_FIX.md  RAILWAY_BRANCH_SETUP.md  RAILWAY_BUILD_OPTIMIZATION.md  RAILWAY_CONFIGURATION_SUMMARY.md  RAILWAY_DASHBOARD_CHECKLIST.md  RAILWAY_DEPLOYMENT.md  README_DEPLOYMENT.md  RESTART_COMPLETE.md  SETUP.md  SOCIAL_MEDIA_SETUP.md  (+43 more)
config/: ingest.yaml
docs/: CAPTIONS_AI_GUIDE.md  CAPTIONS_AI_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  GIT_WORKFLOW.md  ingestion_decisions.md
frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts  test-env.js  vercel.json  vite.config.ts
migrations/: 001_subscription_credit_system.sql  README.md
score_backups/: scores_backup_20251106_202008.json
scripts/: CAPTIONING_EXAMPLE.md  CAPTIONING_STATUS.md  QUICK_START_TONE_SORTER.md  README_CAPTIONING.md  README_SUPABASE_TONE_SORTER.md  README_TONE_SORTER.md  capture_and_caption.py  capture_caption_upload.py  check_storage.py  cleanup_expired_clips.py  continuous_live_stream.py  db_smoke.py  demo_tone_sorter.py  deploy_railway.py  init_stream_dirs.py  list_clips.py  live_ingest.py  (+21 more)
(+145 files in other folders)
